name:               SummarizeSSHKeys
version:            1.0.0.0
synopsis:           A utility to produce readable summaries of SSH authorized_keys files
homepage:           https://github.com/neilmayhew/SummarizeSSHKeys
license:            MIT
license-file:       LICENSE
author:             Neil Mayhew
maintainer:         neil_mayhew@users.sourceforge.net
copyright:          2016
category:           System
build-type:         Simple
cabal-version:      >=1.10

executable summarize-ssh-keys
  main-is:            SummarizeSSHKeys.hs
  other-modules:      QuietTesting, SSHKeys
  default-language:   Haskell2010
  build-depends:      base >=4.5 && <4.13,
                      HUnit >=1.2 && <1.7,
                      parsec >= 2.0 && <4.0

test-suite all-tests
  type:               exitcode-stdio-1.0
  other-modules:      QuietTesting, SSHKeys
  main-is:            TestMain.hs
  default-language:   Haskell2010
  build-depends:      base >=4.5 && <4.13,
                      HUnit >=1.2 && <1.7,
                      parsec >= 2.0 && <4.0
